# fightcaves-rl

./: .gitattributes  .gitignore  README.md  movement_audit.md  movement_audit_recommendations.md
deploy/runpod/: bootstrap_from_volume.sh
pufferlib_4/config/: fight_caves.ini
runescape-rl/: .gitignore  CMakeLists.txt  README.md  train.sh
runescape-rl/config/: fight_caves.ini
runescape-rl/config/snapshots/: fight_caves_obs0.ini  fight_caves_obs1.ini  fight_caves_obs2.ini  fight_caves_s1_01.ini  fight_caves_s1_02.ini  fight_caves_s1_03.ini  fight_caves_s1_04.ini  fight_caves_s1_05.ini  fight_caves_s1_06.ini  fight_caves_s1_07.ini  fight_caves_s1_08.ini  fight_caves_s1_09.ini  fight_caves_s1_10.ini  fight_caves_v29_0.ini  fight_caves_v29_1.ini  fight_caves_v29_2.ini  fight_caves_v29_3.ini  fight_caves_v29_4.ini  fight_caves_v30_0.ini  sweep_obs.sh  sweep_s1.sh  sweep_v29.sh  v27.1.ini  v27.2.ini  v27.3.ini  v27.ini
runescape-rl/config/v35_retrains/: v35.1.ini  v35.2.ini  v35.3.ini  v35.4.ini  v35.5.ini  v35.6.ini  v35.7.ini
runescape-rl/demo-env/: CMakeLists.txt
runescape-rl/demo-env/assets/: fc_player.models  fightcaves.oanim  fightcaves.object_anim.models
runescape-rl/demo-env/assets/data/ui/: interface_debug.txt  interface_manifest.json
runescape-rl/demo-env/src/: asset_raylib.h  fc_anim_loader.h  fc_assets.h  fc_models.h  fc_npc_models.h  ui.c  ui.h  ui_assets.c  ui_interfaces.c  viewer.c
runescape-rl/demo-env/tests/: test_headless.c
runescape-rl/docs/: run_history.md  sweep_history.md
runescape-rl/docs/data/: phase1_data.csv  phase3_fulldata.csv  phase3_sweep_dataset.csv  training_config_matrix_v20.2_v21_v21.2.csv
runescape-rl/fc-core/: CMakeLists.txt
runescape-rl/fc-core/assets/: fightcaves.collision
runescape-rl/fc-core/include/: fc_api.h  fc_contracts.h  fc_player_init.h  fc_reward.h  fc_types.h  fc_wave.h
runescape-rl/fc-core/src/: fc_state.c  fc_tick.c
runescape-rl/fc-training/: CMakeLists.txt  build.sh  fc_render.h  fight_caves.c  fight_caves.h
runescape-rl/fc-viewer/: CMakeLists.txt  eval_viewer.py
runescape-rl/fc-viewer/assets/: fc_all.anims  fc_npcs.models  fc_player.anims  fc_player.models  fc_projectiles.models  fightcaves.tanim  fightcaves.terrain
runescape-rl/fc-viewer/src/: asset_raylib.h  fc_asset_raylib.h  fc_assets.h  fc_debug.c  fc_debug.h  fc_debug_overlay.h  fc_hash.c  fc_io.h  fc_objects_loader.h  fc_spotanims.h  fc_terrain_loader.h  ui.c  ui_assets.h  ui_interfaces.h  ui_reference.h  viewer.c
runescape-rl/fc-viewer/tests/: validate_assets.c
runescape-rl/scripts/: rerun_v27_series.sh
runescape-rl/tools/: build_fc_assets.py
runescape-rl/tools/cache_pipeline/: export_animations.py  export_collision_map.py  export_collision_map_modern.py  export_models.py  export_objects.py  export_projectile_models.py  export_spotanims.py  export_sprites_modern.py  export_terrain.py  export_textures.py  export_ui_interfaces.py  modern_cache_reader.py
runescape-rl/tools/cache_pipeline/rc_cache/: __init__.py  animations.py  bytes.py  config.py  container.py  definitions.py  groups.py  index.py  interfaces.py  locations.py  maps.py  models.py  names.py  smoke.py  sprites.py  store.py  textures.py  xtea.py
runescape-rl/training-env/: binding.c  build.sh  fc_render.h  fight_caves.c  fight_caves.h
